--- a/css/image-grid.css
+++ b/css/image-grid.css
@@ -151,6 +151,16 @@ TODO: move this to /sass/ folder and apply the correct colors
 	color: #999;
 }
 
+.og-details-light a {
+  color: #BBBBBB;
+  border: 3px solid #BBBBBB;
+}
+
+.og-details-light a:hover {
+  border-color: #fff;
+  color: #fff;
+}
+
 .og-loading {
 	width: 20px;
 	height: 20px;
@@ -212,32 +222,6 @@ TODO: move this to /sass/ folder and apply the correct colors
 	display: block;
 	max-width: 100%;
 }
-/* Show next to image */
-.caption-1::before,
-.caption-1::after {
-	position: absolute;
-	left: 100%;
-	width: 100%;
-	margin: 0 0 0 10%;
-	font-weight: 300;
-	color: #89867e;
-}
-
-.caption-1::before {
-	content: attr(data-title);
-	top: 0;
-	height: 25%;
-	padding: 5px 30px 15px 10px;
-	font-size: 40px;
-	border-bottom: 1px solid rgba(0,0,0,0.1);
-}
-
-.caption-1::after {
-	content: attr(data-description);
-	top: 25%;
-	padding: 20px 10px 0;
-	font-size: 18px;
-}
 
 /* Show on hover (animate opacity) */
 .caption-2::before,
@@ -272,87 +256,6 @@ TODO: move this to /sass/ folder and apply the correct colors
 .caption-2:hover::after {
 	opacity: 0.9;
 }
-
-/* Slide in on hover (animate transforms) */
-.caption-3 {
-	overflow: hidden;
-	background: #000;
-}
-
-.caption-3 img {
-	-webkit-transition: opacity 0.3s ease-in-out;
-	-moz-transition: opacity 0.3s ease-in-out;
-	transition: opacity 0.3s ease-in-out;
-}
-
-.caption-3:hover img {
-	opacity: 0.5;
-}
-
-.caption-3::after,
-.caption-3::before {
-	position: absolute;
-	width: 100%;
-	height: 50%;
-	color: #fff;
-	z-index: 1;
-	-webkit-transition: -webkit-transform 0.3s ease-in-out; 
-	-moz-transition: -moz-transform 0.3s ease-in-out; 
-	transition: transform 0.3s ease-in-out; 
-}
-
-.caption-3::after {
-	content: attr(data-title);
-	top: 0;
-	background: #0083ab;
-	font-size: 32px;
-	font-weight: 300;
-	padding: 30px;
-	-webkit-transform: translateY(-100%);
-	-moz-transform: translateY(-100%);
-	transform: translateY(-100%);
-	opacity: 0.9;
-}
-
-.caption-3::before {
-	content: '...' attr(data-description) '...';
-	top: 50%;
-	background: #f27545;
-	font-size: 14px;
-	padding: 20px;
-	-webkit-transform: translateY(100%);
-	-moz-transform: translateY(100%);
-	transform: translateY(100%);
-}
-
-.caption-3:hover::after,
-.caption-3:hover::before {
-	-webkit-transform: translateY(0%);
-	-moz-transform: translateY(0%);
-	transform: translateY(0%);
-}
-
-/* Caption 4 
-.effects { padding-left: 15px; }
-.effects .img { position: relative; margin-bottom: 50px; position: relative; z-index: 1; overflow: hidden; }
-.effects .img:nth-child(n) { margin-right: 5px; }
-.effects .img:first-child { margin-left: -15px; }
-.effects .img:last-child { margin-right: 0; }
-.effects .img img { display: block; margin: 0; padding: 0; height: auto; }
-.overlay { display: block; position: absolute; z-index: 20; background: rgba(100, 194, 158, 0.8); overflow: hidden; transition: all 0.5s; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; }
-a.close-overlay { display: block; position: absolute; top: 0; right: 0; z-index: 100; width: 45px; height: 45px; font-size: 20px; font-weight: 700; color: #fff; line-height: 45px; text-align: center; background-color: #000; cursor: pointer; }
-a.close-overlay.hidden { display: none; }
-a.expand { display: block; position: absolute; z-index: 100; text-align: center; color: #fff; font-weight: 600; font-size: 14px; text-transform: uppercase; line-height: 30px; }
-.overlay-effect .img i { font-size: 30px; }
-.overlay-effect .overlay { bottom: 0; left: 0; right: 0; width: 100%; height: 100%; opacity: 0; }
-.overlay-effect .overlay a.expand { left: 0; right: 0; bottom: 47%; margin: 0 auto -30px auto; }
-.overlay-effect .img.hover .overlay { height: 100%; opacity: 1; }
-.img img { width: -webkit-calc(100% + 40px) !important; width: calc(100% + 40px) !important; -webkit-transition: opacity 0.35s, -webkit-transform 0.35s; transition: opacity 0.35s, transform 0.35s; -moz-transition: opacity 0.35s, -moz-transform 0.35s; -o-transition: opacity 0.35s, -o-transform 0.35s; -webkit-transform: translate3d(-40px, 0, 0); transform: translate3d(-40px, 0, 0); -ms-transform: translate3d(-40px, 0, 0); }
-.img:hover img { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); -ms-transform: translate3d(-40px, 0, 0); }
-.imglist img { width: -webkit-calc(100%) !important; width: calc(100%) !important; -webkit-transition: opacity 0.35s, -webkit-transform 0.35s; transition: opacity 0.35s, transform 0.35s; -moz-transition: opacity 0.35s, -moz-transform 0.35s; -o-transition: opacity 0.35s, -o-transform 0.35s;  }
-
-*/
-
 
 /* Image Effects */
 .img-effects {
