#FRONTEND Fixed margin for config sidebar close button

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -88,7 +88,8 @@
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
+    color: #999;
+    padding-right: 12px;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
