--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -25,6 +25,7 @@
     margin-left: -250px;
     overflow-y: auto;
     position: fixed;
+    top: 0;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -67,6 +68,7 @@
 .sidebar-nav li a {
     color: #999;
     display: block;
+    font-size: 16px;
     text-decoration: none;
 }
 
