--- a/css/frontend-guide.css
+++ b/css/frontend-guide.css
@@ -469,10 +469,11 @@ p {
 
 .content-three .content-item h4 {
     background: whitesmoke;
+    background: rgba(255, 255, 255, 0.8);
     display: inline-block;
     font-size: 20px;
     left: 0;
-    margin: 0;
+    margin: 0 0 0 15px;
     padding: 10px 20px;
     position: absolute;
 }
