--- a/css/frontend-guide.css
+++ b/css/frontend-guide.css
@@ -507,3 +507,12 @@ p {
 .fc-toolbar .fc-center {
     margin-top: 0.5em;
 }
+
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+
+    .content-intro .content-item h2 {
+        margin: 10px 0 0;
+    }
+
+}
