--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -7,7 +7,6 @@
 /* Toggle Styles */
 
 #wrapper {
-    padding-left: 0;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -15,14 +14,14 @@
 }
 
 #wrapper.toggled {
-    padding-left: 0;
+    padding-right: 0;
 }
 
 #sidebar-wrapper {
     background: #000;
-    left: 250px;
+    right: 250px;
     height: 100%;
-    margin-left: -250px;
+    margin-right: -250px;
     overflow-x: hidden;
     overflow-y: auto;
     position: fixed;
@@ -35,7 +34,7 @@
     z-index: 1000;
 }
 
-#wrapper.toggled #sidebar-wrapper {
+.toggled #sidebar-wrapper {
     width: 250px;
 }
 
@@ -45,8 +44,8 @@
     width: 100%;
 }
 
-#wrapper.toggled #page-content-wrapper {
-    margin-right: -250px;
+.toggled #page-content-wrapper {
+    margin-left: -250px;
     position: absolute;
 }
 
@@ -55,15 +54,14 @@
 .sidebar-nav {
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0 10px 0 20px;
     position: absolute;
     top: 0;
     width: 250px;
 }
 
 .sidebar-nav li {
-    line-height: 40px;
-    text-indent: 20px;
+    margin: 20px 0;
 }
 
 .sidebar-nav li a {
@@ -84,33 +82,25 @@
     text-decoration: none;
 }
 
-.sidebar-nav > .sidebar-brand {
-    font-size: 18px;
-    height: 65px;
-    line-height: 60px;
+.sidebar-nav .sidebar-brand {
+    margin: 30px 0 10px;
 }
 
-.sidebar-nav > .sidebar-brand a {
-    color: #999;
-    padding-right: 12px;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    background: none;
-    color: #fff;
+.sidebar-nav .sidebar-brand a {
+    font-size: 22px;
 }
 
 @media(min-width: 480px) {
 
     #wrapper {
-        padding-left: 250px;
+        padding-right: 250px;
     }
 
     #sidebar-wrapper {
         width: 250px;
     }
 
-    #wrapper.toggled #sidebar-wrapper {
+    .toggled #sidebar-wrapper {
         width: 0;
     }
 
@@ -119,8 +109,8 @@
         position: relative;
     }
 
-    #wrapper.toggled #page-content-wrapper {
-        margin-right: 0;
+    .toggled #page-content-wrapper {
+        margin-left: 0;
         position: relative;
     }
 
