--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -61,13 +61,14 @@
 }
 
 .sidebar-nav li {
+    color: #fff;
     margin: 20px 0;
+    font-size: 16px;
 }
 
 .sidebar-nav li a {
     color: #999;
     display: block;
-    font-size: 16px;
     text-decoration: none;
 }
 
@@ -84,11 +85,9 @@
 
 .sidebar-nav .sidebar-brand {
     margin: 30px 0 10px;
-}
-
-.sidebar-nav .sidebar-brand a {
     font-size: 22px;
 }
+
 
 @media(min-width: 480px) {
 
@@ -100,7 +99,7 @@
         width: 250px;
     }
 
-    .toggled #sidebar-wrapper {
+    #wrapper.toggled #sidebar-wrapper {
         width: 0;
     }
 
@@ -109,7 +108,7 @@
         position: relative;
     }
 
-    .toggled #page-content-wrapper {
+    #wrapper.toggled #page-content-wrapper {
         margin-left: 0;
         position: relative;
     }
