--- a/css/radio.css
+++ b/css/radio.css
@@ -1,10 +1,46 @@
 
 /* radio buttons */
-.radioicon { margin:30px 0 20px 0;} 
-.radioicon .btn:active, .radioicon .btn.active {box-shadow:none; -moz-box-shadow:none; -webkit-box-shadow:none;}
-.radioicon-label{}
-.radioicon-label .radioicon-control{ background:#F2F2EE; text-align:left; padding:15px; border:1px solid #ebebe5; border-radius:5px; position:relative; text-align: center;}
-.radioicon .radioicon-label.btn.active .radioicon-control{ background:#dadad0; border:1px solid #acac9d;}
-.radioicon-label .radioicon-control .icon_selector{ position:absolute; z-index:1; left:30%; top:30%; opacity:0;}
-.radioicon-label .radioicon-control p { margin:10px 0 0 0; font-size:12px; }
-.radioicon-label .radioicon-control i { position:relative; z-index:2; font-size: 26px;}
+
+.radioicon {
+    margin: 30px 0 20px;
+}
+
+.radioicon .btn:active,
+.radioicon .btn.active {
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.radioicon-label .radioicon-control {
+    background: #F2F2EE;
+    border: 1px solid #ebebe5;
+    border-radius: 35px 0 0;
+    padding: 15px 15px 0;
+    position: relative;
+    text-align: center;
+}
+
+.radioicon .radioicon-label.btn.active .radioicon-control {
+    background: #dadad0;
+    border: 1px solid #acac9d;
+}
+
+.radioicon-label .radioicon-control .icon_selector {
+    left: 30%;
+    position: absolute;
+    opacity: 0;
+    top: 30%;
+    z-index: 1;
+}
+
+.radioicon-label .radioicon-control p {
+    font-size: 12px;
+    margin: 10px 0 0;
+}
+
+.radioicon-label .radioicon-control i {
+    font-size: 26px;
+    position: relative;
+    z-index: 2;
+}
